--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 absl-py==2.1.0
 astunparse==1.6.3
+blinker==1.8.2
 certifi==2024.8.30
 charset-normalizer==3.3.2
+click==8.1.7
 distlib==0.3.8
 filelock==3.16.1
+Flask==3.0.3
 flatbuffers==24.3.25
 gast==0.6.0
 google-pasta==0.2.0
@@ -11,6 +14,8 @@ grpcio==1.66.1
 gunicorn==23.0.0
 h5py==3.11.0
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
 joblib==1.4.2
 keras==3.5.0
 libclang==18.1.1
